--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "tsc --noEmit"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.90.1",
     "clsx": "^2.1.0",
     "lucide-react": "^0.343.0",
     "react": "^18.2.0",
@@ -27,6 +28,6 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
-    "vite": "^5.2.0"
+    "vite": "^7.3.1"
   }
 }
