--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@supabase/supabase-js": "^2.90.1",
     "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.343.0",
     "pdfjs-dist": "^5.4.530",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.22.3",
+    "supabase": "^2.75.2",
     "tailwind-merge": "^2.2.1",
     "zod": "^3.22.4"
   },
